--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
+    "i18next": "^25.2.1",
     "lucide-react": "^0.386.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.0.0",
@@ -36,6 +37,7 @@
     "react-dom": "^18",
     "resend": "^4.6.0",
     "sharp": "^0.33.5",
+    "react-i18next": "^15.5.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
