feat(templates): move email templates to utils

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
-    "lodash": "^4.17.21",
+    "handlebars": "^4.7.8",
     "i18next": "^25.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.386.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.0.0",
@@ -35,9 +36,9 @@
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.5.3",
     "resend": "^4.6.0",
     "sharp": "^0.33.5",
-    "react-i18next": "^15.5.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
