--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.58.1",
     "react-i18next": "^15.5.3",
     "resend": "^4.6.0",
     "sharp": "^0.33.5",
