--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
+    "framer-motion": "^12.19.1",
     "handlebars": "^4.7.8",
     "i18next": "^25.2.1",
     "lodash": "^4.17.21",
