--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.386.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.0.0",
+    "motion": "^12.19.1",
     "next": "^14.2.30",
     "next-auth": "^4.24.11",
     "react": "^18",
