--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.5.3",
+    "react-virtuoso": "^4.13.0",
     "resend": "^4.6.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
