Add Pusher-based club chat

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-haptic": "^1.1.11"
+    "use-haptic": "^1.1.11",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.18",
