--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "copy-webpack-plugin": "^13.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^10.1.5",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5"
