--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=23.0.0",
+    "npm": ">=11.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "create-test-data": "tsx scripts/createTestData.ts",
-    "fill-avatars": "tsx scripts/updateMissingAvatars.ts"
+    "fill-avatars": "tsx scripts/updateMissingAvatars.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.835.0",
@@ -54,11 +59,19 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "copy-webpack-plugin": "^13.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.30.0",
+    "eslint-config-next": "^15.3.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5"
-  }
+  },
+  "lint-staged": {
+  "*.{js,jsx,ts,tsx}": [
+    "eslint --fix",
+    "prettier --write"
+  ]
+}
 }
