--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game-planer",
+  "name": "paimo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -54,24 +54,27 @@
     "use-haptic": "^1.1.11"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.12.0",
     "@types/lodash": "^4.17.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "copy-webpack-plugin": "^13.0.0",
-    "eslint": "^9.30.0",
-    "eslint-config-next": "^15.3.4",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.30",
+    "eslint-config-prettier": "^10.1.5",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5"
   },
   "lint-staged": {
-  "*.{js,jsx,ts,tsx}": [
-    "eslint --fix",
-    "prettier --write"
-  ]
-}
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  }
 }
