--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "game-planer",
+  "name": "paimo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=22.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "create-test-data": "tsx scripts/createTestData.ts",
-    "fill-avatars": "tsx scripts/updateMissingAvatars.ts"
+    "fill-avatars": "tsx scripts/updateMissingAvatars.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.835.0",
@@ -49,16 +54,27 @@
     "use-haptic": "^1.1.11"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.12.0",
     "@types/lodash": "^4.17.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "copy-webpack-plugin": "^13.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.30",
+    "eslint-config-prettier": "^10.1.5",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
